Update: Changes on Practice 3.1 - pedido.html

--- a/Semana 2 - HTML/Practice 3.1 - Pedido.html
+++ b/Semana 2 - HTML/Practice 3.1 - Pedido.html
@@ -12,6 +12,7 @@
 
 <body bgcolor="black">
     <font color="white">
+        
         <h1>Elige que quieres comer: </h1>
 
         <form action="pedido.js">
@@ -27,11 +28,12 @@
 
             <label for="rad2">Llevar</label>
             <input type="radio" name="rad" id="rad2">
-            <br>
-
+            <br><br>
+            <button><a href="./Practice 3 - Menú de taqueria.html">Volver al menú</a></button>
+            <input type="reset" value="Reestablecer">
+            <input type="submit" value="Enviar pedido"  onclick="alert('Su pedido fue enviado con exito.');">
         </form><br><br>
-        <button><a href="./Practice 3 - Menú de taqueria.html">Volver al menú</a></button>
-        <button onclick="alert('Su pedido fue enviado con exito.');">Realizar pedido</button>
+
     </font>
 </body>
 
